--- a/BSA.html
+++ b/BSA.html
@@ -18,7 +18,7 @@
             <a href="Eduarte.html">Eduarte</a>
             <a href="Canvas.html">Canvas</a>
             <a href="BSA.html ">BSA</a>
-            <a href="Examenplan.html">Examplan</a>
+            <a href="Examenplan.html">Examenplan</a>
             <a href="Emre.html">Emre</a>
             <a href="paginashondrique.html ">Shondrique</a>
           </div>
