--- a/paginashondrique.html
+++ b/paginashondrique.html
@@ -16,7 +16,7 @@
                 <a href="Canvas.html">Canvas</a>
                 <a href="BSA.html ">BSA</a>
                 <a href="Examenplan.html">Examenplan</a>
-                <a href="Examplan.html">Examplan</a>
+                <a href="Examplan.html">Examenplan</a>
                 <a href="Emre.html">Emre</a>
                 <a href="paginashondrique.html ">Shondrique</a>
             </nav>
