--- a/BSA.html
+++ b/BSA.html
@@ -31,7 +31,7 @@
 
     <p>BSA staat voor Bindend studieadvies. Ieder student ontvangt in het eerste jaar een bindend studieadvies. Deze bepaald of je door mag gaan met de opleiding. </p><br>
 
-    <p>Verdere uitleg kunt u vinden door hierop te klikken: <a href="https://studiehandleidingen.techniekcollegerotterdam.nl/studiehandleidingen/opleidingswijzer-software-developer/examens-en-diplomering">BSA</a>
+    <p>Verdere uitleg kunt u vinden door hierop te klikken: <a href="https://studiehandleidingen.techniekcollegerotterdam.nl/studiehandleidingen/opleidingswijzer-software-developer/bindend-studieadvies-en-voortijdige-be%C3%ABindiging">BSA</a>
     
      </div>
     
